src/jigsaw/assets/scss/index.scss
@import "./core/basc";

/*滚动条样式start(针对'minimal-dark'这个皮肤做的修改)*/
.mCustomScrollbar .mCS-dark.mCSB_scrollTools{
    margin: 0;
    &:hover, &.mCSB_scrollTools_onDrag {
        .mCSB_draggerContainer{
            background: $scroll-field-bg;
        }
    }
    &.mCSB_scrollTools_vertical{
        width: 8px;
        .mCSB_dragger_bar{
            margin-right: 0;
        }
        &:hover, &.mCSB_scrollTools_onDrag{
            .mCSB_dragger_bar{
                width: 8px;
            }
        }
    }
    &.mCSB_scrollTools_horizontal{
        height: 8px;
        .mCSB_dragger_bar{
            margin-top: 3px;
        }
        &:hover, &.mCSB_scrollTools_onDrag{
            .mCSB_dragger_bar{
                height: 8px;
                margin-top: 0;
            }
        }
    }
    .mCSB_dragger .mCSB_dragger_bar, .mCSB_dragger:hover .mCSB_dragger_bar{
        background-color: $scroll-bar-bg;
    }
    .mCSB_dragger:active .mCSB_dragger_bar,
    .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar{
        background-color: $scroll-bar-active-bg;
    }
    .mCSB_draggerRail{
        display: none;
    }
}
.mCSB_container_wrapper{
    margin: 0;
    & > .mCSB_container {
        padding: 0;
    }
}
.mCSB_vertical_horizontal > .mCSB_scrollTools.mCSB_scrollTools_horizontal{
    right: 0;
}
.mCSB_vertical_horizontal > .mCSB_scrollTools.mCSB_scrollTools_vertical{
    bottom: 0;
}
.mCSB_inside > .mCSB_container {
    margin-right: 0;
}
/*滚动条样式end*/

/*时间组件样式start*/
jigsaw-time{
    color: $text-color;
    .bootstrap-datetimepicker-widget table td.old, .bootstrap-datetimepicker-widget table td.new {
        color: $text-color-secondary;
    }

    .bootstrap-datetimepicker-widget table td.day{
        height: 14px;
        line-height: 14px;
    }

    .bootstrap-datetimepicker-widget .datepicker-decades tbody td span{
        display: none;
        &.decade {
            display: inline-block;
            line-height: 24px !important;
            width: 72px;
        }
    }

    .bootstrap-datetimepicker-widget table td span.active,
    .bootstrap-datetimepicker-widget table td.active,
    .bootstrap-datetimepicker-widget table td.active:hover,
    .jigsaw-time-box .bootstrap-datetimepicker-widget table tr.active td{
        background-color: $primary-color;
    }

    .bootstrap-datetimepicker-widget table th.picker-switch{
        font-weight: 700 !important;
    }
    .bootstrap-datetimepicker-widget table thead tr:first-child th{
        &:hover{
            background: none;
            color: $primary-color;
        }
        span.glyphicon{
            @include font-awesome();
            font-size: 16px;
            &.glyphicon-chevron-left:before{
                content: "\f104";
            }
            &.glyphicon-chevron-right:before{
                content: "\f105";
            }
        }

    }

    .bootstrap-datetimepicker-widget .picker-switch a[data-action]{
        color: $primary-color;
    }
    .bootstrap-datetimepicker-widget a[data-action]{
        color: $text-color;
        &:hover{
            color: $primary-color;
        }
    }

    .bootstrap-datetimepicker-widget .picker-switch td span{
        height: 24px;
        line-height: 24px;
        &.glyphicon{
            @include font-awesome();
            font-size: 14px;
            line-height: 24px;
            &.glyphicon-time:before{
                content: "\f017";
            }
            &.glyphicon-calendar:before{
                content: "\f073";
            }
        }
    }

    .bootstrap-datetimepicker-widget table td span{
        height: 24px;
        line-height: 24px;
    }

    .bootstrap-datetimepicker-widget table td a.btn span{
        &.glyphicon{
            @include font-awesome();
            font-size: 16px;
            line-height: 24px;
            &.glyphicon-chevron-up:before{
                content: "\f106";
            }
            &.glyphicon-chevron-down:before{
                content: "\f107";
            }
        }
    }

    .bootstrap-datetimepicker-widget .timepicker-hour,
    .bootstrap-datetimepicker-widget .timepicker-minute,
    .bootstrap-datetimepicker-widget .timepicker-second{
        font-weight: 400;
    }
}
/*时间组件样式end*/

/*zTree组件样式start*/
.ztree li span.button{
    @include font-awesome();
    background: none;
    font-size: 14px;
    color: $primary-color;
    &.ico_open{
        &:before{
            content: "\f07c";
        }
    }
    &.ico_close{
        &:before{
            content: "\f07b";
        }
    }
    &.ico_docu{
        &:before{
            content: "\f15c";
        }
    }
    &.chk{
        border: 1px solid $text-color-secondary;
        border-radius: 2px;
        font-size: 12px;
        cursor: pointer;
        &:hover{
            border: 1px solid $primary-color;
        }
        &.checkbox_true_full, &.checkbox_true_full_focus{
            border: 1px solid $primary-color;
            &:before{
                content: "\f00c";
            }
        }
    }
    &.edit{
        margin-left: 5px;
        vertical-align: middle;
        color: $text-color-secondary;
        &:before{
            content: "\f044";
        }
        &:hover{
            color: $primary-color;
        }
    }
    &.remove{
        vertical-align: middle;
        color: $text-color-secondary;
        &:before{
            content: "\f014";
        }
        &:hover{
            color: $primary-color;
        }
    }
    &.noline_open, &.center_open, &.bottom_open, &.roots_open{
        color: $text-color-secondary;
        &:before{
            content: "\f106";
        }
    }
    &.noline_close, &.center_close, &.bottom_close, &.roots_close{
        color: $text-color-secondary;
        &:before{
            content: "\f107";
        }
    }
}
/*zTree组件样式end*/

